--- a/Waterworld.ipynb
+++ b/Waterworld.ipynb
@@ -201,7 +201,7 @@
     "\n",
     "    rewards = {agent: 0 for agent in env.possible_agents}\n",
     "\n",
-    "    # Note: We train using the Parallel API but evaluate using the AEC API\n",
+    "    ",
     "    # SB3 models are designed for single-agent settings, we get around this by using he same model for every agent\n",
     "    for i in range(num_games):\n",
     "        env.reset(seed=i)\n",
@@ -229,7 +229,7 @@
     "    env_fn = waterworld_v4\n",
     "    env_kwargs = {}\n",
     "\n",
-    "    # Train a model (takes ~3 minutes on GPU)\n",
+    "    # Train a model \n",
     "    train_butterfly_supersuit(env_fn, steps=196_608, seed=0, **env_kwargs)\n",
     "\n",
     "    # Evaluate 10 games (average reward should be positive but can vary significantly)\n",
