--- a/Knights.ipynb
+++ b/Knights.ipynb
@@ -176,13 +176,13 @@
     "    # Set vector_state to false in order to use visual observations (significantly longer training time)\n",
     "    env_kwargs = dict(max_cycles=100, max_zombies=4, vector_state=True)\n",
     "\n",
-    "    # Train a model (takes ~5 minutes on a laptop CPU)\n",
+    "    # Train a model \n",
     "    train(env_fn, steps=81_920, seed=0, **env_kwargs)\n",
     "\n",
-    "    # Evaluate 10 games (takes ~10 seconds on a laptop CPU)\n",
+    "    # Evaluate 10 games \n",
     "    eval(env_fn, num_games=10, render_mode=None, **env_kwargs)\n",
     "\n",
-    "    # Watch 2 games (takes ~10 seconds on a laptop CPU)\n",
+    "    # Watch 2 games \n",
     "    # eval(env_fn, num_games=2, render_mode=\"human\", **env_kwargs)"
    ]
   },
